# sikao

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SIKAO_MIGRATION_AGENT_BRIEF.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.frontend-package.json  vitest.frontend-packages.config.ts
services/api/: README.md  pyproject.toml
services/api/scripts/: export_openapi.py  llm_smoke.py
services/api/spec/: openapi.json
services/api/tests/: _ai_feedback_support.py  _home_phase_m3_support.py  _home_phase_m4_support.py  _home_phase_m5_support.py  _practice_phase_p1_support.py  _review_phase_r1_support.py  test_ai_questions_feedback_basic_v2.py  test_ai_questions_feedback_submit_hooks_v2.py  test_ai_questions_generate_failfast_v2.py  test_ai_questions_generate_v2.py  test_ai_questions_pool_query_v2.py  test_aipta_import.py  test_aipta_import_service.py  test_aipta_text_parser.py  test_alembic_pg_identifier_lengths.py  test_alembic_single_head.py  test_auth_identity_v2.py  test_auth_identity_v2_routes.py  test_auth_recovery_routes.py  test_auth_recovery_service.py  test_backfill_v2_scripts.py  test_byom_config.py  test_cause_analysis_prompts_v2.py  test_confidence_invariants.py  test_contract.py  test_cross_paper_retry.py  test_cross_tab_review.py  test_daily_practice_v2.py  test_dashboard_breakdown.py  test_debt_invariants.py  test_detect_image_mime.py  test_email_provider.py  test_essay_draft.py  test_essay_grader.py  test_essay_grading_prompt.py  test_essay_grading_routes.py  test_essay_grading_service.py  test_essay_ingest.py  test_exam_api.py  (+235 more)
(+1995 files in other folders)
