[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sikao-api"
version = "0.0.0"
description = "SIKAO 后端 API 服务（FastAPI + SQLAlchemy + Alembic）"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.1",
  "pydantic>=2.10",
  "pydantic-settings>=2.6.1",
  "pyjwt>=2.10.1",
  "passlib[bcrypt]>=1.7.4",
  "httpx>=0.28.1",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.20",
  "Pillow>=10.4",
  "cryptography>=44.0",
  "fastapi-limiter>=0.1.6,<0.2.0",
  "cachetools>=5.3",
  "apscheduler>=3.10",
  "structlog>=24.4",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2", "uvicorn[standard]>=0.32"]
sms = ["tencentcloud-sdk-python-sms>=3.0"]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
]

[project.scripts]
sikao-api = "sikao_api.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
# WSL + Windows temp directories can make pytest fd capture lose its temp file.
addopts = "--capture=sys"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
